--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -205,5 +205,14 @@
 		"paragraph-2": "¡Gracias por tu donación!",
 		"paragraph-3": "La Fundación La Finca de Todos es una Entidad sin ánimo de Lucro, número de registro 20230143627.",
 		"paragraph-4": "Donar ahora"
+	},
+
+	"educationalWorkshops": {
+		"ourObjective": "Nuestro Objetivo",
+		"paragraphMain": "Nuestros talleres son planificados por maestros con amor a la enseñanza que ayudarán a todos los estudiantes, con o sin discapacidad, a convertirse en adultos con conciencia. El contacto con la naturaleza despierta nuevas conexiones en el cerebro mientras que la variedad de temas y actividades refuerzan conceptos de ingenio, autoestima, responsabilidad social y cooperación.",
+		"paragraphMain-1": "Aquí en",
+		"paragraphMain-2": ", ¡La diversión y la educación van mano a mano!"
+
+
 	}
 }
