--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -210,7 +210,17 @@
 		"ourObjective": "Our Objective",
 		"paragraphMain": "Our workshops are planned by teachers with a love of teaching who will help all students, with or without disabilities, become conscientious adults. Contact with nature awakens new connections in the brain while the variety of topics and activities reinforce concepts of resourcefulness, self-esteem, social responsibility, and cooperation.",
 		"paragraphMain-1": "Here at",
-		"paragraphMain-2": ", learning and fun go hand in hand!"
+		"paragraphMain-2": ", learning and fun go hand in hand!",
+		"workshops": "Workshops"
+	},
+
+	"infographicsPassDay": {
+		"titleMain-1": "Day camp for children in",
+		"titleMain-2": "4th grade",
+		"paragraphMainPassDay": "A day of fun and relaxation",
+		"home" : "HOME",
+		"paragraphHome": "Arrival at "
+
 
 
 	}
