Se organiza formulario con correo de la clienta

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -51,10 +51,11 @@
 		"listOne": "Auditory",
 		"listTwo": "Intellectual",
 		"listThree": "Deafblind",
-		"listFour": "Multiple",
+		"listFour": "Cognitive",
 		"listFive": "Physical",
 		"listSix": "Visual",
 		"listSeven": "Psicosocial",
+		"listEight": "Multiple",
 		"15%": "15%",
 		"paragraphWhoAreWe-8": " of the people registered stated that they were",
 		"paragraphWhoAreWe-9": " victims of the armed conflict.",
