--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -50,10 +50,11 @@
 		"listOne": "Auditiva",
 		"listTwo": "Intelectual",
 		"listThree": "Sordoceguera",
-		"listFour": "Múltiple",
+		"listFour": "Cognitiva",
 		"listFive": "Física",
 		"listSix": "Visual",
 		"listSeven": "Psicosocial",
+		"listEight": "Múltiple",
 		"15%": "15%",
 		"paragraphWhoAreWe-8": " de las personas registradas manifestó ser",
 		"paragraphWhoAreWe-9": " víctima del conflicto armado.",
