Finalizada traducción a inglés

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -214,7 +214,29 @@
 		"paragraphMain": "Our workshops are planned by teachers with a love of teaching who will help all students, with or without disabilities, become conscientious adults. Contact with nature awakens new connections in the brain while the variety of topics and activities reinforce concepts of resourcefulness, self-esteem, social responsibility, and cooperation.",
 		"paragraphMain-1": "Here at",
 		"paragraphMain-2": ", learning and fun go hand in hand!",
-		"workshops": "Workshops"
+		"workshops": "Workshops",
+		"workshops-1": "On the farm",
+		"paragraphWorkshops-1": "Let's learn how the products we consume reach our table. With our hands in the soil, we can appreciate the work of our farmers and immerse ourselves in the experience of La Finca.",
+		"workshops-2": "Recycling",
+		"paragraphWorkshops-2": "Let's become “recycle-lovers” with fun activities to learn how to recycle correctly and why it is so important to participate in this process while instilling respect for the work of recyclers.",
+		"workshops-3": "Cultural impact",
+		"paragraphWorkshops-3": "Let's learn more about the contributions of indigenous tribes and Afro-Colombian peoples in the development of our multicultural homeland, both historically and in the present.",
+		"workshops-4": "In the kitchen",
+		"paragraphWorkshops-4": "Let's experiment in the kitchen with fresh, organic ingredients harvested at La Finca de Todos so that our visitors learn to make healthy choices.",
+		"workshops-5": "Meditation and Yoga",
+		"paragraphWorkshops-5": "Let's focus on breathing with gentle movements to develop strength and balance through yoga and achieve inner calm through  meditation, taking advantage of the quiet spaces at La Finca.",
+		"workshops-6": "Sustainability",
+		"paragraphWorkshops-6": "Cultivate environmental awareness to understand sustainable development. We present innovative ways to preserve natural resources to inspire new ideas in the fight against the loss of biodiversity.",
+		"workshops-7": "Farm animals",
+		"paragraphWorkshops-7": "Let's live in harmony with the creatures that inhabit the earth alongside us. At La Finca, we learn about their life cycles, their environment, and how we can protect them.",
+		"workshops-8": "Physical activity",
+		"paragraphWorkshops-8": "With a variety of team activities and individual achievements, lots of fun awaits you at La Finca! The emphasis is on friendship, not the final score."
+
+
+
+
+
+
 	},
 
 	"infographicsPassDay": {
