--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -214,7 +214,30 @@
 		"paragraphMain": "Nuestros talleres son planificados por maestros con amor a la enseñanza que ayudarán a todos los estudiantes, con o sin discapacidad, a convertirse en adultos con conciencia. El contacto con la naturaleza despierta nuevas conexiones en el cerebro mientras que la variedad de temas y actividades refuerzan conceptos de ingenio, autoestima, responsabilidad social y cooperación.",
 		"paragraphMain-1": "Aquí en",
 		"paragraphMain-2": ", ¡La diversión y la educación van mano a mano!",
-		"workshops": "Categorías de talleres"
+		"workshops": "Categorías de talleres",
+		"workshops-1": "El campo",
+		"paragraphWorkshops-1": "Aprendamos cómo llegan a nuestra mesa los productos que consumimos. Con las manos en la tierra podemos apreciar el trabajo de nuestros campesinos y sumergirnos en la experiencia de La Finca.",
+		"workshops-2": "Reciclaje",
+		"paragraphWorkshops-2": "Volvámonos en “recicl-amores” con actividades divertidas para aprender cómo reciclar correctamente y porque es tan importante participar en este proceso mientras inculcamos respeto al trabajo de los recicladores.",
+		"workshops-3": "Impacto cultural",
+		"paragraphWorkshops-3": "Conozcamos más sobre las contribuciones de las tribus indígenas y los pueblos afrocolombianos en el desarrollo de nuestra patria multicultural, tanto en la historia como en el presente.",
+		"workshops-4": "En la cocina",
+		"paragraphWorkshops-4": "Experimentemos en la cocina con ingredientes frescos y orgánicos cosechados en La Finca de Todos para que nuestros visitantes aprendan a tomar decisiones saludables.",
+		"workshops-5": "Meditación y Yoga",
+		"paragraphWorkshops-5": "Enfoquémonos en la respiración con movimientos suaves para desarrollar fuerza y equilibrio con el yoga y lograr calma interior con la meditación, aprovechando los espacios tranquilos de La Finca.",
+		"workshops-6": "Sostenibilidad",
+		"paragraphWorkshops-6": "Cultivemos conciencia ambiental para entender el desarrollo sostenible. Presentamos formas innovadoras de preservar los recursos naturales para inspirar nuevas ideas en la lucha contra la pérdida de biodiversidad.",
+		"workshops-7": "Animales de la finca",
+		"paragraphWorkshops-7": "Vivamos en armonía con las criaturas que habitan la tierra junto a nosotros. En La Finca, aprendemos sobre sus ciclos de vida, su medioambiente y cómo podemos protegerlos.",
+		"workshops-8": "Actividad física",
+		"paragraphWorkshops-8": "Con una variedad de actividades en equipo y logros individuales, ¡mucha diversión te espera en La Finca! El énfasis está en la amistad, no en el puntaje final."
+
+
+
+
+
+		
+
 	},
 
 	"infographicsPassDay": {
