--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -10,7 +10,7 @@
 	"navbar": {
 		"home": "Home",
 		"aboutUs": "About Us",
-		"theFarm": "The farm",
+		"theFarm": "The Farm",
 		"weekendActivities": "Weekend Activities",
 		"educationalWorkshops": "Educational Workshops",
 		"location": "Location",
@@ -136,7 +136,7 @@
 		"Cards-2": "Wide, flat paths without architectural barriers",
 		"Cards-3": "Telecoil hearing loop technology",
 		"Cards-4": "High-contrast signage and tactile tiles",
-		"Cards-5": "Sound and Braille guides for navigating the Farm",
+		"Cards-5": "Audio and Braille guides for navigating the Farm",
 		"Cards-6": "Accessible restrooms with changing facilities",
 		"Cards-7": "Service animals and companion pets are welcome",
 		"Cards-8": "Free Wifi and PC to connect to the MinTIC Relay Center",
