Cambio en botones de traductor

--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -9,7 +9,7 @@
 	"navbar": {
 		"home": "Inicio",
 		"aboutUs": "Nosotros",
-		"theFarm": "La finca",
+		"theFarm": "La Finca",
 		"weekendActivities": "Fin de semana",
 		"educationalWorkshops": "Talleres pedagógicos",
 		"location": "Ubicación",
