Se agrega video finca en 3D

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -153,7 +153,7 @@
 	"weekend": {
 		"weekendActivities": "Weekend activities",
 		"Cards-1": "Butterfly Farm",
-		"paragraphCards-1": "Observe a spectable of colors in an accessible space dedicated to the breeding and conservation of butterflies.",
+		"paragraphCards-1": "Observe a spectacle of colors in an accessible space dedicated to the breeding and conservation of butterflies.",
 		"Cards-2": "Accessible and elevated garden beds",
 		"paragraphCards-2": "We seek to recover contact with nature in an accessible way so we can have the experience of planting, caring for, and harvesting food.",
 		"Cards-3": "Accessible greenhouse with smart technology",
